# wifi_led_matrix

./: .gitmodules  LICENSE  README.md
Firmware/: .gitignore
Firmware/ESP32/M5StackController/: .project  CMakeLists.txt  sdkconfig
Firmware/ESP32/M5StackController/main/: CMakeLists.txt  hello_world_main.c  m5stack_main.cpp
Firmware/ESP32/SPICentralTest/: .project  CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/ESP32/SPICentralTest/main/: Kconfig.projbuild  MatrixTask.cpp  Protocol.h  StrandTask.cpp  StrandTask.h  main.c  main.cpp
Firmware/ESP32/i2csample/: .project  sdkconfig  sdkconfig.old
Firmware/ESP32/i2csample/main/: i2c_example_main.c
Firmware/ESP32/sample_spiffs_server/: .project
Firmware/ESP32/wifi_test/: sdkconfig  sdkconfig.old
Firmware/STM32/: .cproject
Firmware/STM32/CommandLibrary/: .cproject  .project  Command.cpp  Command.h  CommandProcessor.cpp  CommandProcessor.h
Firmware/STM32/CommandLibrary/Debug/: CommandProcessor.d  makefile  subdir.mk
Firmware/STM32/CommandLibrary/Debug_ARM/: CommandProcessor.d  makefile  subdir.mk
Firmware/STM32/CommandLibrary_Test/: .cproject  .project  CommandProcessor_SetPixel_MultiplePixel_Test.cpp  CommandProcessor_SetPixel_SinglePixel_Test.cpp  DummyDisplayDriver.cpp  DummyDisplayDriver.h  TestDisplay.cpp  TestDisplay.h  catch.hpp  main.cpp
Firmware/STM32/CommandLibrary_Test/Debug/: DummyDisplayDriver.d  (+7 more)
Firmware/STM32/Common/: .cproject  PixelMapping.cpp  PixelMapping.h  Protocol.h  configuration.h  empty.cpp
Firmware/STM32/Debug/: makefile  sources.mk
Firmware/STM32/DisplayDriver/: .cproject  .project  LedSingleWire.h  MatrixDriver.cpp
Firmware/STM32/DisplayDriverCommon/: .cproject  .project  DisplayDriver.h  empty.cpp
Firmware/STM32/GraphicsDriver/: .cproject  .mxproject  .project  GraphicsDriver Debug.launch  GraphicsDriver.ioc
Firmware/STM32/GraphicsDriver_F411/: .cproject  .mxproject  .project  GraphicsDriver_F411.ioc
Firmware/STM32/GraphicsDriver_STM32F411CEU/: .cproject  .mxproject  .project  GraphicsDriver_STM32F411CEU.ioc  GraphicsDriver_STM32F411CEU.launch  STM32F411CEUX_FLASH.ld
Firmware/STM32/GraphicsDriver_STM32F411RET6/: .mxproject  .project  GraphicsDriver_STM32F411RET6.ioc
Firmware/STM32/GraphicsDriver_STM32F411RET6_OLD/: .mxproject  .project  GraphicsDriver_STM32F411RET6.ioc
Firmware/STM32/NetworkLibrary/: .cproject  .project  Request.cpp  Request.h
Firmware/STM32/NetworkLibrary_Test/: .cproject  .project  Request_Parse_SetPixel.cpp  Request_Parse_Test.cpp  main.cpp
Firmware/STM32/SPISpike/: .cproject  .mxproject  .project  SPISpike Debug.launch  SPISpike.ioc
Firmware/STM32_Rebuild/: CMakeLists.txt  arm-none-eabi-gcc.cmake  cmake_install.cmake
Firmware/STM32_Rebuild/CommandProcessor/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.hpp
Firmware/STM32_Rebuild/Common/: CMakeLists.txt  PixelMapping.cpp  Protocol.hpp
Firmware/STM32_Rebuild/Core/: CMakeLists.txt
Firmware/STM32_Rebuild/Core/Inc/: stm32f4xx_it.h
Firmware/STM32_Rebuild/Core/Src/: stm32f4xx_hal_msp.c
Firmware/STM32_Rebuild/DisplayDriverCommon/: CMakeLists.txt  DisplayDriver.hpp
Firmware/STM32_Rebuild/Drivers/: CMakeLists.txt
Firmware/STM32_Rebuild/NetworkLibrary/: CMakeLists.txt  Request.cpp  Request.hpp
Firmware/STM32_Rebuild/data/: CMakeLists.txt
Firmware/STM32_Rebuild/devices/: CMakeLists.txt
Firmware/STM32_Rebuild/devices/inc/: LedSingleWire.hpp  MatrixDriver.hpp
Firmware/STM32_Rebuild/devices/src/: LedSingleWire.cpp  MatrixDriver.cpp
Firmware/STM32_Rebuild/src/: cpp_main.cpp
Hardware/Prototype/ComboBoard v1/: ComboBoard v1-cache.lib  ComboBoard v1.kicad_pcb  ComboBoard v1.kicad_prl  ComboBoard v1.kicad_pro  ComboBoard v1.sch-bak  _autosave-ComboBoard v1.kicad_pcb  file600E2938.sch  file6011C2E7.sch  file60161606.sch  file60161606.sch-bak  fp-info-cache
Hardware/Prototype/STM32 Driver v1/: STM32 Driver v1-cache.lib  STM32 Driver v1.kicad_pcb  STM32 Driver v1.kicad_pcb-bak  STM32 Driver v1.kicad_prl  STM32 Driver v1.kicad_pro  STM32 Driver v1.kicad_sch  STM32 Driver v1.net  STM32 Driver v1.pro  STM32 Driver v1.sch  STM32 Driver v1.sch-bak  _autosave-STM32 Driver v1.kicad_pcb  fp-info-cache  sym-lib-table
RE/: HUB75 Debugging 2.dwf3logic  SPI Debugging.dwf3logic  STM32F103 - Expanded DMA.dwf3logicacq  adafruit_portal_1.dwf3logicacq  adafruit_portal_2.dwf3logicacq  adafruit_portal_3.dwf3logicacq  debugging.dwf3logicacq
script/: christmasparrot_small.h  extract_image.py  pacman.h  parrot_small.h  party_wizard.h
web_spike/: package-lock.json  package.json  spike.html
web_spike/scripts/: bundle.js  spike.js
(+272 files in other folders)
